--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="color-scheme" content="light only">
         <link rel="preload" as="image" href="/assets/covers/background.webp" type="image/webp" fetchpriority="high">
         <link rel="preload" as="font" href="/assets/type/ABC_Diatype.woff2" type="font/woff2" crossorigin="anonymous" fetchpriority="high">
+        <link rel="preload" as="font" href="/assets/type/ABC_Diatype_Medium.woff2" type="font/woff2" crossorigin="anonymous" fetchpriority="high">
         <title>Max Sheridan</title>     
         <link rel="stylesheet" href="/css/styles.css" type="text/css">
         <link rel="stylesheet" href="/css/audio.css" type="text/css">
