--- a/content/tug-wells.html
+++ b/content/tug-wells.html
@@ -20,7 +20,7 @@
                     Tug Wells dropped out of the California Career Institute in 2002 to oversee the family mining concern in El Callao, Venezuela. After a fishing accident left him partially deaf, he took up graphic design. Photographer Annie Liebovitz once described Wells’ collages and digital found art. Wells’ most recent work can be found in Vogue Detroit, Der Spiegel, Be-Mag, and the New York Times Crossword Puzzle.
                 </p>
                 <p>
-                    Contact: tug@maxsheridan.com
+                    Contact: tug@bozotexino.mozmail.com
                 </p> 
             </div>
         </div>
