--- a/content/info.html
+++ b/content/info.html
@@ -26,7 +26,7 @@
                         <label for="entry.1983459528">Email</label><br>
                         <input type="text" name="entry.1983459528" id="entry.1983459528"><br>
                         <label for="entry.1950049378">Message</label><br>
-                        <textarea name="entry.1950049378" id="entry.1950049378" placeholder="Hi, there. I’ve spotted some serious errors on your website."></textarea><br><br>
+                        <textarea name="entry.1950049378" id="entry.1950049378" placeholder="Hi there. I’ve spotted some serious errors on your website."></textarea><br><br>
                         <button type="submit">Send</button>
                     </form>
                 </div>
