--- a/content/ncmg.html
+++ b/content/ncmg.html
@@ -17,10 +17,10 @@
             <div class="page-inner">
                 <h1>Nic Cage Movie&#32;<span class="blink">Gold!</span></h1>
                 <p>
-                    Thanks for your interest in writing a Nic Cage movie with me. Pitch your script in&#32;<b>two sentences max</b>.<b>&#32;</b>No bios please.
+                    Thanks for your interest in writing a Nic Cage movie with me. Pitch your script in two sentences max. No bios please.
                 </p>
                 <p>
-                    Pitch it to&#32;<b>pitch@bozotexino.mozmail.com.</b>
+                    Pitch it to pitch@bozotexino.mozmail.com.
                 </p>
                 <p>
                     1. Please don’t pitch multiple Cage scripts or an idea you already pitched to Alain Moussi.
