--- a/content/owk_7.html
+++ b/content/owk_7.html
@@ -13,8 +13,8 @@
         <link rel="manifest" href="/manifest.json" type="application/json">
     </head>
     <body>
-        <div class="page-content-inner">
-            <div class="content">
+        <div class="page">
+            <div class="page-inner">
                 <img src="/assets/images/OWK_7_p1.svg" alt="OWK 7 page 1">
                 <img src="/assets/images/OWK_7_p10.svg" alt="OWK 7 page 10">
                 <img src="/assets/images/OWK_7_p11.svg" alt="OWK 7 page 11">
